--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dropzone": "^14.2.3",
     "react-phone-number-input": "^3.4.5",
     "sonner": "^1.5.0",
+    "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
